// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightingColor renders 0 1`] = `
Array [
  .c0 {
  lighting-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders function 1`] = `
Array [
  .c0 {
  lighting-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders invalid theme path 1`] = `
Array [
  .c0 {
  lighting-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders negative number 1`] = `
Array [
  .c0 {
  lighting-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  lighting-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    lighting-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    lighting-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    lighting-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    lighting-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  lighting-color: July;
}

@media May {
  .c0 {
    lighting-color: August;
  }
}

@media April {
  .c0 {
    lighting-color: September;
  }
}

@media January {
  .c0 {
    lighting-color: November;
  }
}

@media April {
  .c0 {
    lighting-color: August;
  }
}

@media June {
  .c0 {
    lighting-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: July;
}

@media May {
  .c0 {
    lighting-color: August;
  }
}

@media April {
  .c0 {
    lighting-color: September;
  }
}

@media January {
  .c0 {
    lighting-color: November;
  }
}

@media April {
  .c0 {
    lighting-color: August;
  }
}

@media June {
  .c0 {
    lighting-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    lighting-color: November;
  }
}

@media April {
  .c0 {
    lighting-color: January;
  }
}

@media January {
  .c0 {
    lighting-color: December;
  }
}

@media April {
  .c0 {
    lighting-color: April;
  }
}

@media June {
  .c0 {
    lighting-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    lighting-color: November;
  }
}

@media April {
  .c0 {
    lighting-color: January;
  }
}

@media January {
  .c0 {
    lighting-color: December;
  }
}

@media April {
  .c0 {
    lighting-color: April;
  }
}

@media June {
  .c0 {
    lighting-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    lighting-color: July;
  }
}

@media April {
  .c0 {
    lighting-color: August;
  }
}

@media January {
  .c0 {
    lighting-color: September;
  }
}

@media April {
  .c0 {
    lighting-color: November;
  }
}

@media June {
  .c0 {
    lighting-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    lighting-color: July;
  }
}

@media April {
  .c0 {
    lighting-color: August;
  }
}

@media January {
  .c0 {
    lighting-color: September;
  }
}

@media April {
  .c0 {
    lighting-color: November;
  }
}

@media June {
  .c0 {
    lighting-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    lighting-color: January;
  }
}

@media April {
  .c0 {
    lighting-color: December;
  }
}

@media January {
  .c0 {
    lighting-color: April;
  }
}

@media April {
  .c0 {
    lighting-color: May;
  }
}

@media June {
  .c0 {
    lighting-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    lighting-color: January;
  }
}

@media April {
  .c0 {
    lighting-color: December;
  }
}

@media January {
  .c0 {
    lighting-color: April;
  }
}

@media April {
  .c0 {
    lighting-color: May;
  }
}

@media June {
  .c0 {
    lighting-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders postitive number 1`] = `
Array [
  .c0 {
  lighting-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders string 1`] = `
Array [
  .c0 {
  lighting-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`lightingColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`lightingColor renders valid theme path 1`] = `
Array [
  .c0 {
  lighting-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  lighting-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
